Maybe this will fix my text size issue on mobile.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,8 @@ p {
 .title {
 	color: #fff;
 	text-transform: uppercase;
-	font-size: 40px;
+	/*font-size: 40px;*/
+	font-size: xx-large;
 	font-weight: 900;
 	font-family: 'Lato', sans-serif;
 }
